omni/tests/goldens/types/undefined_ident_15.omni
let result15:int = missing15
